--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.47.16",
+    "@tanstack/react-query": "^5.64.2",
+    "base64-arraybuffer": "^1.0.2",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.25",
+    "expo-constants": "~17.0.4",
+    "expo-crypto": "~14.0.2",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.16",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
@@ -26,11 +37,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "expo-crypto": "~14.0.2"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
